(Bug) Commented out testing code so that I could merge with master.
  This commit is part of work to merge with the latest version of master
so that I can use this version of ROSE that has many fixes for Gabe's tool
with the newest unit testing work (which needs some of the same infrasture).

J-17

--- a/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
@@ -641,6 +641,8 @@ TESTCODES_REQUIRED_TO_PASS = \
      test2021_23.c \
      test2021_24.c \
      test2021_25.c \
+     test2021_27.c \
+     test2021_28.c \
      test2022_01.c 
 
 
