--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -948,6 +948,9 @@ check-thorn4: thorn4
 RERS=$(patsubst %,Problem%.log, $(shell seq 6))
 rers: $(RERS)
 
+check-solver17:
+	./codethorn $(srcdir)/tests/DOM049_large_arrays.C --solver=17 --context-sensitive=yes --abstraction-mode=1 --exploration-mode="topologic-sort" --normalize-level=2 --precision=2 --vis --status
+
 check-solver18:
 	./codethorn $(srcdir)/tests/DOM049_large_arrays.C --solver=18 --context-sensitive=yes --abstraction-mode=1 --exploration-mode="topologic-sort" --normalize-level=2 --precision=2 --vis --status
 
