(Binary Analysis) MemoryMap not cloned for ConcreteState
* After switching from memory map by value to pointers, the memory map
  object was not cloned during
  Rose::BinaryAnalysis::InstructionSemantics2::ConcreteSemantics::MemoryState::clone
  and was therefore modified by changes made to the insertion/erasure
  of segments in the source map (although changes to data still worked
  as expected).

RPM-50

--- a/tests/nonsmoke/functional/BinaryAnalysis/Makefile.am
+++ b/tests/nonsmoke/functional/BinaryAnalysis/Makefile.am
@@ -1640,7 +1640,22 @@ testDisassembler-t32.passed: $(top_srcdir)/scripts/test_with_answer testDisassem
 		ANS="$(testDisassembler_t32_answer)"						\
 		$< $@
 
+########################################################################################################################
+# Concrete memory state cloning
+########################################################################################################################
 
+noinst_PROGRAMS += concreteStates
+concreteStates_SOURCES = concreteStates.C
+concreteStates_LDADD = $(ROSE_SEPARATE_LIBS)
+
+TEST_TARGETS += concreteStates.passed
+concreteStates.passed: $(top_srcdir)/scripts/test_exit_status concreteStates
+	@$(RTH_RUN)					\
+		TITLE="test concrete state clone [$@]"	\
+		DISABLED="$$(./conditionalDisable)"	\
+		USE_SUBDIR=yes				\
+		CMD="$$(pwd)/concreteStates"		\
+		$< $@
 
 ###############################################################################################################################
 # Standard boilerplate
