(Flang Frontend) Integrated with removal of JDK dependency
- Refactoring for more recent changes to Jovial
  - reducing ATerm visibility

ROSE-2207

--- a/src/frontend/Experimental_General_Language_Support/Makefile.am
+++ b/src/frontend/Experimental_General_Language_Support/Makefile.am
@@ -9,7 +9,7 @@ endif
 noinst_LTLIBRARIES = libexperimentalRoseGeneralLanguage.la
 
 libexperimentalRoseGeneralLanguage_la_SOURCES = \
-  sage-tree-builder.C ModuleBuilder.C Tokens.C
+  SageTreeBuilder.C ModuleBuilder.C PosInfo.C Tokens.C
 
 noinst_HEADERS = \
-  sage-tree-builder.h ModuleBuilder.h Tokens.h
+  SageTreeBuilder.h ModuleBuilder.h PosInfo.h Tokens.h
