(Bug) Fixed bug in names used for template arguments in the symbol tables.
   This commit fixes a bug in the names of template arguments used as
keys in the symbol tables.  Specifically the name require name qualification.
This is now done, and a collection of test code are now available to test this.
This is a subject of work between Tristan and I reserved for later this week.

J-17

--- a/tests/nonsmoke/functional/CompileTests/Cxx_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/Cxx_tests/Makefile.am
@@ -2995,10 +2995,11 @@ performance_timing:
 if ROSE_WITH_LIBHARU
 # DQ (3/17/2017): Added PDF test for ROSE evaluation (forces testing of parts of ROSE for lcov):
 test_pdf_generation: $(TEST_PDF_TRANSLATOR)
+# DQ (2/4/2022): Commented out to run smaller tests first.
 	../../testPDFGeneration --edg:no_warnings -w -rose:verbose 0 -rose:skip_unparse_asm_commands -rose:skipAstConsistancyTests -rose:skip_commentsAndDirectives -rose:skip_unparse -I$(srcdir) -c $(srcdir)/test2004_77.C
 	ls -l *.pdf
 	@echo "Removing the generated PDF file because it is up to 150Meg and we want to save disk space."
-	rm *.pdf
+	rm -f *.pdf
 else
 test_pdf_generation:
 	@echo "libharu support is not enabled"
