(codethorn) fixed states stats in solver18
* fixed the calculation of the number of stored states,
  matches allocation/deallocatoin stats now.

CODETHORN-70

--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -768,6 +768,10 @@ check-domain-avset:
 check-domain-avset-err:
 	$(srcdir)/scripts/runDomainTests --testdir $(srcdir)/tests --show-errors --l2avset
 
+check-domain-regression:
+	$(srcdir)/scripts/runDomainTests --testdir $(srcdir)/tests --regression-tests
+
+
 check-cfg:
 	$(srcdir)/scripts/runCfgTests $(srcdir)/tests
 
