(ModelChecker) Adds optional progress reporting
* A Rose::Progress object can be registered with a model checker in
  order for it to asynchronously report status.

RPM-74

--- a/src/Rose/BinaryAnalysis/ModelChecker/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/ModelChecker/CMakeLists.txt
@@ -18,7 +18,8 @@ add_library(roseBinaryAnalysisModelChecker OBJECT
   Settings.C
   SemanticCallbacks.C
   SourceLister.C
-  Tag.C)
+  Tag.C
+  WorkerStatus.C)
 
 add_dependencies(roseBinaryAnalysisModelChecker rosetta_generated)
 
@@ -45,5 +46,6 @@ install(FILES
   SourceLister.h
   Tag.h
   Types.h
+  WorkerStatus.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/BinaryAnalysis/ModelChecker)
