(Jovial) Tweaked source position and comment placement
- Primarily fixed and tested for MainProgram and Procedure modules
- Required careful attention to setting source position of function bodies
  so as to allow comments to be placed correctly in relation to BEGIN
  and END location (curly braces in C).

gitlab-6

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -8,6 +8,7 @@ LDADD    = $(ROSE_LIBS)
 
 JOVIAL_TESTCODES = \
  tiny.jov                               \
+ tiny_comments.jov                      \
  bit_conversion.jov                     \
  int_conversion.jov                     \
  item_desc_conversion.jov               \
@@ -229,7 +230,8 @@ JOVIAL_TESTCODES = \
  gitlab-issue-12.jov                    \
  gitlab-issue-13.jov                    \
  charlie.jov                            \
- shadow.jov
+ shadow.jov                             \
+ comments.jov
 
 JOVIAL_PARSER_TESTCODES = \
  fixed_cast.jov                         \
