(Jvm) Added  SgAsmJvmConstantPool node description to ROSETTA
- This class provides information about a Java Virtual Machine (JVM)
  constant pool originating in a Java class file.

JVM-1

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -29,6 +29,9 @@ add_library(roseBinaryFormats OBJECT
   ElfSymbolTable.C
   ElfSymbolVersion.C
 
+  ### Java Virtual Machine Format (JVM) ###
+  JvmConstantPool.C
+
   ### Microsoft Windows PE Format */
   PeExport.C
   PeFileHeader.C
