--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -97,6 +97,7 @@ librose_partial_la_SOURCES =								\
 	BinaryAnalysis/Partitioner2/DataBlock.C						\
 	BinaryAnalysis/Partitioner2/DataFlow.C						\
 	BinaryAnalysis/Partitioner2/Engine.C						\
+	BinaryAnalysis/Partitioner2/JvmEngine.C						\
 	BinaryAnalysis/Partitioner2/Exception.C						\
 	BinaryAnalysis/Partitioner2/Function.C						\
 	BinaryAnalysis/Partitioner2/FunctionCallGraph.C					\
