(Jovial) Modified grammar to fix PackingSpecifier
- Packing specifiers "N", "M", and "D" were sometimes split off from names
  when these characters were the leading character.

gitlab-74

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -352,6 +352,7 @@ COMPOOL_TESTCODES = \
  gitlab-issue-12.cpl                    \
  gitlab-issue-14.cpl                    \
  gitlab-issue-17.cpl                    \
+ gitlab-issue-74.cpl                    \
  beta.cpl                               \
  parttype.cpl
 
