(Testing) Added portability testing cleanup script
* Script to clean up slave machines.

RPM-101

--- a/projects/MatrixTesting/scripts/Makefile.am
+++ b/projects/MatrixTesting/scripts/Makefile.am
@@ -8,4 +8,5 @@ bin_SCRIPTS =					\
 	rose-matrix-show-latest			\
 	rose-matrix-slave-run			\
 	rose-matrix-slave-babysit		\
+	rose-matrix-slave-clean			\
 	rose-matrix-status
