(SageBuilder) initial builder functions for template class declarations
* test translator: buildTemplateClass.C
* SageBuilder::buildNonrealType(const SgName & name)
* SageBuilder::buildDeclarationScope()
* SageBuilder::buildNondefiningTemplateClassDeclaration(..)
* SageBuilder::buildTemplateClassDeclaration(...)

ROSE-274

--- a/tests/nonsmoke/functional/roseTests/astInterfaceTests/Makefile.am
+++ b/tests/nonsmoke/functional/roseTests/astInterfaceTests/Makefile.am
@@ -36,7 +36,7 @@ noinst_PROGRAMS = \
     buildCommonBlock doLoopNormalization buildLabelStatement2 replaceWithPattern \
     insertBeforeUsingCommaOp insertAfterUsingCommaOp deepCopy fixVariableReferences \
     buildJavaPackage createAbstractHandles buildStatementFromString \
-    getArrayElementType interfaceFunctionCoverage
+    getArrayElementType interfaceFunctionCoverage buildTemplateClass
 
 VALGRIND_OPTIONS = --tool=memcheck -v --num-callers=30 --leak-check=no --error-limit=no --show-reachable=yes --trace-children=yes --suppressions=$(top_srcdir)/scripts/rose-suppressions-for-valgrind
 # VALGRIND = valgrind $(VALGRIND_OPTIONS)
@@ -59,6 +59,7 @@ insertHeader_SOURCES                     = insertHeader.C
 buildExpression_SOURCES                  = buildExpression.C
 buildStructDeclaration_SOURCES           = buildStructDeclaration.C
 buildStructDeclaration2_SOURCES          = buildStructDeclaration2.C
+buildTemplateClass_SOURCES               = buildTemplateClass.C
 lookupNamedType_SOURCES                  = lookupNamedType.C           
 buildFile_SOURCES                        = buildFile.C           
 movePreprocessingInfo_SOURCES            = movePreprocessingInfo.C
@@ -126,6 +127,7 @@ generatedCodeExamples = \
   rose_inputbuildExpression.C \
   rose_inputbuildStructDeclaration.C \
   rose_inputbuildStructDeclaration2.C \
+  rose_inputbuildTemplateClass.C \
   rose_inputLookupNamedType.C \
   rose_inputbuildFile.C \
   rose_inputMovePreprocessingInfo.C \
@@ -220,6 +222,7 @@ group1 =						\
 	rose_inputbuildExpression.C			\
 	rose_inputbuildStructDeclaration.C		\
 	rose_inputbuildStructDeclaration2.C		\
+	rose_inputbuildTemplateClass.C	         	\
 	rose_inputbuildCpreprocessorDefineDeclaration.C	\
 	rose_inputinstrumentEndOfFunction.C		\
 	rose_inputbuildLabelStatement.C			\
@@ -587,7 +590,8 @@ EXTRA_DIST = astInterface.conf inputBlank1.C inputBlank2.C inputfindMain.C input
        inputbuildLabelStatement2.f inputreplaceWithPattern.C inputinsertBeforeUsingCommaOp.C			\
        inputinsertAfterUsingCommaOp.C inputdeepCopy.C inputfixVariableReferences.C  inputcreateAbstractHandles.C \
        inputloopCollapsing_2.C  inputloopCollapsing_3.C  inputloopCollapsing_4.C  inputloopCollapsing_5.C \
-       inputbuildJavaPackage.C inputloopCollapsing_1.C inputbuildStatementFromString.C inputinterfaceFunctionCoverage.C 
+       inputbuildJavaPackage.C inputloopCollapsing_1.C inputbuildStatementFromString.C inputinterfaceFunctionCoverage.C  \
+       inputbuildTemplateClass.C
 
 # JP (10/4/14): Added the unit tests
 unit-tests:
