(cmdline) Added option for AST to graphviz and AST checker.
 * integrated the graphviz part (the graph version still add ".dot" to the filename)
 * need to start experimenting with checker, esp. a generic "defect" object

RC-1294

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -228,6 +228,7 @@ libroseLibraries = \
    $(top_builddir)/src/util/Sawyer/libroseSawyer.la \
    $(top_builddir)/src/roseExtensions/failSafe/libfailsafe.la \
    $(top_builddir)/src/Rose/librose_partial.la \
+   $(top_builddir)/src/Rose/AST/libRoseAST.la \
    $(libroseSqlite3xConnection) \
    $(libroseQtExtension)
 
