--- a/src/Rose/CMakeLists.txt
+++ b/src/Rose/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(CommandLine)
 add_subdirectory(Diagnostics)
 add_subdirectory(FileSystem)
 add_subdirectory(StringUtility)
+add_subdirectory(AST)
 
 # needed to properly define ROSE_UTIL_API
 add_definitions(-DROSE_UTIL_EXPORTS)
