(Jvm) Added SgAsmJvmInstruction node description to ROSETTA
- This class provides information about a Java Virtual Machine (JVM)
  instruction.  It is used when decoding a Java class file.

JVM-1

--- a/src/Rose/BinaryAnalysis/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/CMakeLists.txt
@@ -92,6 +92,7 @@ install(FILES
   InstructionCache.h
   InstructionEnumsAarch32.h
   InstructionEnumsAarch64.h
+  InstructionEnumsJvm.h
   InstructionEnumsM68k.h
   InstructionEnumsMips.h
   InstructionEnumsPowerpc.h
