--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -328,6 +328,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/InstructionCache.h						\
 	Rose/BinaryAnalysis/InstructionEnumsAarch32.h					\
 	Rose/BinaryAnalysis/InstructionEnumsAarch64.h					\
+	Rose/BinaryAnalysis/InstructionEnumsJvm.h					\
 	Rose/BinaryAnalysis/InstructionEnumsM68k.h					\
 	Rose/BinaryAnalysis/InstructionEnumsMips.h					\
 	Rose/BinaryAnalysis/InstructionEnumsPowerpc.h					\
