(Jvm) Added SgAsmJvmFileHeader Sage node to ROSETTA
- SgAsmJvmFileHeader isa SgAsmGenericHeader

JVM-1

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(roseBinaryFormats OBJECT
   ### Java Virtual Machine Format (JVM) ###
   JvmAttribute.C
   JvmConstantPool.C
+  JvmFileHeader.C
 
   ### Microsoft Windows PE Format */
   PeExport.C
