--- a/src/Rose/AST/CMakeLists.txt
+++ b/src/Rose/AST/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(RoseAST OBJECT
-  cmdline.C graphviz.C checker.C)
+  cmdline.C graphviz.C checker.C fixupTraversal.C merge.C link.C delete.C share.C load.C consistency.C)
 
 add_dependencies(RoseAST rosetta_generated)
 
@@ -7,5 +7,5 @@ add_dependencies(RoseAST rosetta_generated)
 ########### install files ###############
 
 install(FILES
-  cmdline.h graphviz.h checker.h
+  cmdline.h graphviz.h checker.h merge.h fixupTraversal.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/AST)
