--- a/src/Rose/AST/Makefile.am
+++ b/src/Rose/AST/Makefile.am
@@ -4,11 +4,11 @@ AM_CPPFLAGS = $(ROSE_INCLUDES)
 
 noinst_LTLIBRARIES = libRoseAST.la
 
-libRoseAST_la_SOURCES = checker.C graphviz.C
+libRoseAST_la_SOURCES = checker.C graphviz.C merge.C fixupTraversal.C link.C delete.C share.C load.C consistency.C
 libRoseAST_la_LIBADD = 
 
 libRoseAST_la_includedir = $(prefix)/include/Rose/AST
-libRoseAST_la_include_HEADERS = cmdline.h checker.h graphviz.h
+libRoseAST_la_include_HEADERS = cmdline.h checker.h graphviz.h  merge.h fixupTraversal.h
 
 EXTRA_DIST = CMakeLists.txt
 
