(Jvm) Added SgAsmJvmMethod IR node
JVM-1

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(roseBinaryFormats OBJECT
   JvmAttribute.C
   JvmConstantPool.C
   JvmFileHeader.C
+  JvmMethod.C
 
   ### Microsoft Windows PE Format */
   PeExport.C
