--- a/src/frontend/BinaryFormats/Makefile.am
+++ b/src/frontend/BinaryFormats/Makefile.am
@@ -27,7 +27,7 @@ libroseBinaryFormats_la_SOURCES =											\
       PeImportSection.C PeRvaSizePair.C PeSection.C PeStringTable.C PeSymbolTable.C					\
       ElfDynamicLinking.C ElfErrorFrame.C ElfFileHeader.C ElfNote.C ElfRelocation.C ElfSection.C ElfSectionTable.C	\
       ElfSegmentTable.C ElfStringTable.C ElfSymbolTable.C ElfSymbolVersion.C						\
-      JavaClassFile.C JvmAttribute.C JvmConstantPool.C JvmFileHeader.C							\
+      JavaClassFile.C JvmAttribute.C JvmConstantPool.C JvmFileHeader.C JvmMethod.C					\
       ExecDOS.C ExecNE.C ExecLE.C ExecGeneric.C PeSectionTable.C BinaryVxcoreParser.C
 
 pkginclude_HEADERS =												\
