--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -695,6 +695,7 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
 			 @top_srcdir@/src/Rose/Diagnostics \
 			 @top_srcdir@/src/Rose/FileSystem \
 			 @top_srcdir@/src/Rose/StringUtility \
+			 @top_srcdir@/src/Rose/AST \
                          @top_srcdir@/src/ROSETTA/src/binaryInstruction.C \
                          @top_srcdir@/src/frontend/Disassemblers \
                          @top_srcdir@/src/frontend/BinaryFormats/Rva.C \
