--- a/src/Rose/AST/CMakeLists.txt
+++ b/src/Rose/AST/CMakeLists.txt
@@ -1,5 +1,9 @@
 add_library(RoseAST OBJECT
-  graphviz.C fixupTraversal.C io/merge.C io/link.C io/delete.C io/share.C io/load.C checker/consistency.C checker/checker.C)
+  graphviz.C
+  io/merge.C io/link.C io/delete.C io/share.C io/load.C
+  checker/cmdline.C checker/checker.C
+  checker/integrity_edges.C checker/integrity_declarations.C checker/integrity_symbols.C checker/integrity_types.C
+  utils/edge_ptr_repl.C)
 
 add_dependencies(RoseAST rosetta_generated)
 
@@ -7,5 +11,5 @@ add_dependencies(RoseAST rosetta_generated)
 ########### install files ###############
 
 install(FILES
-  cmdline.h io.h checker.h fixupTraversal.h
+  cmdline.h io.h checker.h defect.h utils.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/AST)
