(Jvm) Added SgAsmJvmCodeAttribute IR node
  - Renamed SgAsmJavaClassFile to SgAsmJvmClassFile
  - Moved several fields from SgAsmJvmFileHeader to SgAsmJvmClassFile
    - e.g., p_access_flags, p_this_class, and p_super_class

JVM-1

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -30,7 +30,7 @@ add_library(roseBinaryFormats OBJECT
   ElfSymbolVersion.C
 
   ### Java Virtual Machine Format (JVM) ###
-  JavaClassFile.C
+  JvmClassFile.C
   JvmAttribute.C
   JvmConstantPool.C
   JvmFileHeader.C
