(Bug) Added access function for p_parent for debugging.
   Added initialization function for SgSourceFile to support
detected uninitialized data members.

J-17

--- a/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
@@ -1034,7 +1034,8 @@ TESTS= $(check_PROGRAMS) caller.out
 if ROSE_USE_SANITIZER
 VALGRIND = $(ADDRESS_SANITIZER_OPTIONS)
 else
-VALGRIND =
+# VALGRIND =
+VALGRIND = $(ADDRESS_SANITIZER_OPTIONS)
 endif
 
 #########
