--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -719,7 +719,7 @@ check-matcher:
 	./matcher_demo  --edg:no_warnings $(srcdir)/tests/basictest5.C < $(srcdir)/tests/matchexpressions/test1.mat
 
 
-CHECK_DEFAULT_PASSING=check-codethorn-internal check-domain check-expr-eval check-normalization check-line-col check-io check-omp-cfg check-commandline-options check-vis check-thorn2 check-stg check-thorn4
+CHECK_DEFAULT_PASSING=check-codethorn-internal check-no-cc check-domain check-expr-eval check-normalization check-line-col check-io check-omp-cfg check-commandline-options check-vis check-thorn2 check-stg check-thorn4
 CHECK_DEFAULT_FAILING=check-data-races check-deadcode
 
 CHECK_WITH_SPOT_PASSING=check-reachability-seq check-ltl-seq check-ltl-par
@@ -911,8 +911,11 @@ check-commandline-options: ./codethorn
 	@./codethorn --cl-args="a bbb cc" $(srcdir)/tests/commandlineoptions1.C --vis --tg1-memory-subgraphs
 #	@dot -Tpdf transitiongraph1.dot -otransitiongraph1.pdf
 
-check-deadcode:
+check-dead-code:
 	$(srcdir)/scripts/runDeadCodeTests $(srcdir)/tests
+
+check-no-cc:
+	$(srcdir)/scripts/runNoConstantConditionTests $(srcdir)/tests
 
 check-normalization:
 	$(srcdir)/scripts/runNormalizationTests $(srcdir)/tests
